[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/world/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/track/TrackCurve.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/track/TrackStraight.tscn" type="PackedScene" id=3]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Curve1" parent="." index="0" instance=ExtResource( 2 )]

[node name="Curve2" parent="." index="1" instance=ExtResource( 2 )]

[node name="Curve3" parent="." index="2" instance=ExtResource( 2 )]

[node name="Curve4" parent="." index="3" instance=ExtResource( 2 )]

[node name="Straight1" parent="." index="4" instance=ExtResource( 3 )]


